--- a/css/style.css
+++ b/css/style.css
@@ -572,7 +572,44 @@ footer p{
 	}
 }
 
+@media(max-width:800px){
+	.button img{
+		width:50px;
+		height:50px;
+	}
+	
+	.spcharadetail{
+		margin-top:15px;
+	}
+	
+	.prof{
+		flex-flow:column;
+	}
+	.profimg{
+		border-right:none;
+		height:500px;
+  		object-fit:cover;
+		object-position:top;
+	}
+	.name{
+	font-size: 30px;
+	margin:15px 0px 0px 20px;
+	}
+	.eng-name{
+		font-size:18px;
+	}
+	
+	.media{
+		width:80%;
+		margin:0 auto;
+	}
+	.media img{
+		width:350px;
+	}
 
+	
+	
+}
 
 
 
