--- a/css/style.css
+++ b/css/style.css
@@ -115,14 +115,16 @@
 .volume-icon{
 	margin:20px;
 	font-size:40px;
-	text-shadow:1px 0px 10px rgba(255,255,255,0.5);
 	cursor:pointer;
 }
 
 .volume-icon:hover{
-	margin:20px;
-	font-size:40px;
-	text-shadow:0px 0px rgba(0,0,0,0);
+	transform: scale(1.5, 1.5);
+	text-shadow:1px 0px 10px rgba(255,255,255,1);
+}
+.ho-ver{
+	transform: scale(1.5, 1.5);
+	text-shadow:1px 0px 10px rgba(255,255,255,1);
 }
 
 
@@ -573,6 +575,29 @@ footer p{
 }
 
 @media(max-width:800px){
+	.loader,
+	.loader:after {
+		border-radius: 50%;
+		width: 20em;
+		height:20em;
+	}
+	.loader-text,.complete-text{
+		font-size:16px;
+	}
+	
+	.complete-underline{
+		top:57%;
+		width:95px;
+		margin-left:-48px;
+	}
+	.volume-icon{
+		margin:20px;
+		font-size:20px;
+		text-shadow:1px 0px 10px rgba(255,255,255,0.5);
+		cursor:pointer;
+	}
+	
+	
 	.button img{
 		width:50px;
 		height:50px;
@@ -606,8 +631,17 @@ footer p{
 	.media img{
 		width:350px;
 	}
-
 	
+	.game-content img{
+		width:250px;
+	}
+	.game-content p{
+		font-size:17px;
+	}
+	
+	.newscontents{
+		font-size:16px;
+	}
 	
 }
 
