--- a/css/style.css
+++ b/css/style.css
@@ -298,6 +298,7 @@ h1{
 	display:flex;
 	justify-content: center;
 	margin-top:25px;
+	margin:25px auto 0px auto;
 }
 
 .button{
@@ -574,7 +575,7 @@ footer p{
 	}
 }
 
-@media(max-width:500px){
+@media(max-width:800px){
 	.loader,
 	.loader:after {
 		border-radius: 50%;
@@ -597,11 +598,11 @@ footer p{
 		cursor:pointer;
 	}
 	
-	
-	.button img{
-		width:50px;
-		height:50px;
+	.button-wrapper{
+		flex-wrap: wrap;
+		width:300px;
 	}
+	
 	
 	.spcharadetail{
 		margin-top:15px;
