--- a/css/style.css
+++ b/css/style.css
@@ -155,17 +155,19 @@
 	left:0px;
 	width:100%;
 }
+header{
+	position:sticky;
+	top:0px;
+}
 
 #global-nav{
 	height:98px;
 	background: #343da6;
 	box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 	width:100%;
-}
-
-.beforescroll{
 	position:relative;
 }
+
 
 ul{
 	list-style:none
@@ -238,10 +240,6 @@ ul{
 	text-shadow: 0px 1px 8px #343da6;
 	padding:60px 0px 50px 0px;
 
-}
-
-.admargin{
-	margin-top:98px;
 }
 
 .section{
@@ -458,7 +456,6 @@ footer p{
 		display:none;
 	}
 	
-	
 	.hidden{
 		display:none;
 	}
@@ -524,39 +521,10 @@ footer p{
 		top:0px;
   		transform: rotate(90deg);
 	}
-	
-	.menu-contents{
-		position:absolute;
-		top:98px;
-		width:100%;
-		text-align:center;
-		background-color:rgba(52,61,166,1);
-		transition:0.5s;
-		opacity:1;
-	}
-	
-	.afterscroll{
-		position:absolute;
-		top:98px;
-		width:100%;
-		text-align:center;
-		background-color:rgba(52,61,166,1);
-	}
-	
-	.menu-contents li{
-		color:#FFFFFF;
-		font-family:'Blinker', sans-serif;
-		font-size:26px;
-		letter-spacing:0.16em;
-		padding:5px 0px;
-		border-top:solid 1px #fff;
-
-	}
-	
-	
+		
 	
 	.button{
-		margin:5px 5px 0px 5px;
+		margin:5px 0px 0px 0px;
 	}
 	
 	.button img{
@@ -597,6 +565,29 @@ footer p{
 		text-shadow:1px 0px 10px rgba(255,255,255,0.5);
 		cursor:pointer;
 	}
+	#global-nav{
+		height:60px;
+	}
+	.sphmusic{
+		color:#FFFFFF;
+		font-size:20px;
+		display: inline-block;
+		margin:20px 0px 0px 25px;
+		cursor:pointer;
+	}
+	.sphlogo{
+		height:45px;
+		top:30px;
+	}
+	.spmenu{
+		top:19px;
+		right:10px;
+	}
+	
+	.menuicon,.menuicon::before,.menuicon::after{
+		height: 2px;
+		width: 28px;
+	}
 	
 	.button-wrapper{
 		flex-wrap: wrap;
@@ -613,7 +604,7 @@ footer p{
 	}
 	.profimg{
 		border-right:none;
-		height:300px;
+		height:280px;
   		object-fit:cover;
 		object-position:top;
 	}
